imported sand piles and small changes for project structure
- Changed default project file
- Imported and sand piles onto island
all ready for you Hiren ;)

--- a/Animation/UnrealProject/CGLighthouseUE5/Config/DefaultEngine.ini
+++ b/Animation/UnrealProject/CGLighthouseUE5/Config/DefaultEngine.ini
@@ -1,7 +1,9 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Engine/Maps/Templates/OpenWorld
+GameDefaultMap=/Game/main.main
+EditorStartupMap=/Game/main.main
+ServerDefaultMap=/Game/main.main
 
 [/Script/Engine.RendererSettings]
 r.AllowStaticLighting=False
